Minimum details in typography section

--- a/index.html
+++ b/index.html
@@ -362,23 +362,28 @@
           <div class="type-chart-row">
             <p class="type-chart-row-title headingOne">Heading One</p>
             <p class="type-chart-row-size">70px</p>
-            <p class="type-chart-row-name">Allura</p>
+            <p class="type-chart-row-name"><b>Allura</b></p>
           </div>
 
           <div class="type-chart-row">
             <p class="type-chart-row-title headingTwo">Heading Two</p>
             <p class="type-chart-row-size">40px</p>
-            <p class="type-chart-row-name">Monserrat</p>
+            <p class="type-chart-row-name"><b>Monserrat</b></p>
           </div>
 
           <div class="type-chart-row">
             <p class="type-chart-row-title headingThree">Heading Three</p>
             <p class="type-chart-row-size">35px</p>
-            <p class="type-chart-row-name">Monserrat</p>
+            <p class="type-chart-row-name"><b>Monserrat</b></p>
           </div>
 
           <div class="type-chart-row">
-            <p class="type-chart-row-title headingFour">Heading Four</p>
+            <p
+              style="font-weight: normal"
+              class="type-chart-row-title headingFour"
+            >
+              Heading Four
+            </p>
             <p class="type-chart-row-size">22px</p>
             <p class="type-chart-row-name">Monserrat</p>
           </div>
@@ -386,7 +391,7 @@
           <div class="type-chart-row">
             <p class="type-chart-row-title headingFive">Heading Five</p>
             <p class="type-chart-row-size">14px</p>
-            <p class="type-chart-row-name">Monserrat</p>
+            <p class="type-chart-row-name"><b>Monserrat</b></p>
           </div>
 
           <div class="type-chart-row">
@@ -398,7 +403,7 @@
           <div class="type-chart-row">
             <p class="type-chart-row-title buttons">Buttons</p>
             <p class="type-chart-row-size">20px</p>
-            <p class="type-chart-row-name">Open Sans</p>
+            <p class="type-chart-row-name"><b>Open Sans</b></p>
           </div>
         </div>
       </div>
