Starting dashboard page

--- a/dashboard.html
+++ b/dashboard.html
@@ -76,7 +76,7 @@
         <nav>
           <ul class="nav-links">
             <li>
-              <a class="btn-dashboard" href="dashboard.html">Dashboard</a>
+              <a href="#colors">Dashboard</a>
             </li>
             <li>
               <a href="#colors">Colors</a>
@@ -88,7 +88,7 @@
               <a href="#typography">Typography</a>
             </li>
             <li>
-              <a href="#visualization">Data visualization</a>
+              <a href="#visualization">Data visualizatasdfasdfsion</a>
             </li>
             <li>
               <a href="#components">Components</a>
@@ -100,9 +100,6 @@
         <!-- Menú móvil -->
         <div class="mobile-nav">
           <ul>
-            <li>
-              <a class="btn-dashboard" href="dashboard.html">Dashboard</a>
-            </li>
             <li>
               <a href="#colors">Colors</a>
             </li>
