--- a/index.html
+++ b/index.html
@@ -947,5 +947,6 @@
     <script src="scripts/scatter_plot.js"></script>
     <script src="scripts/pie_chart.js"></script>
     <script src="scripts/donut_chart.js"></script>
+    <script src="scripts/sales_chart.js"></script>
   </body>
 </html>
