Adding first row of charts, animations and responsiveness

--- a/dashboard.html
+++ b/dashboard.html
@@ -112,7 +112,7 @@
         <div class="dasboard-ui-row">
           <div class="dashboard-chart" id="gauge-chart"></div>
           <div class="dashboard-chart" id="circular-gauge-chart"></div>
-          <div class="dashboard-chart" id="">ss</div>
+          <div class="dashboard-chart" id="vertical-gauge-chart"></div>
         </div>
       </div>
     </section>
@@ -131,5 +131,6 @@
 
     <script src="scripts/gauge_chart.js"></script>
     <script src="scripts/circular_gauge_chart.js"></script>
+    <script src="scripts/vertical_gauge_chart.js"></script>
   </body>
 </html>
