Dashboard progress, just structures for the charts

--- a/dashboard.html
+++ b/dashboard.html
@@ -112,22 +112,21 @@
         <!-- ^ the 3 charts on top -->
         <div class="dasboard-ui-row">
           <!-- & Chart number 1 -->
-          <div class="dashboard-chart-box">
+          <div class="dashboard-chart-box small">
             <div id="gauge-chart"></div>
           </div>
           <!-- & Chart number 2 -->
-          <div class="dashboard-chart-box">
+          <div class="dashboard-chart-box small">
             <div id="circular-gauge-chart"></div>
           </div>
           <!-- & Chart number 3 -->
-          <div class="dashboard-chart-box">
+          <div class="dashboard-chart-box small">
             <div id="vertical-gauge-chart"></div>
           </div>
         </div>
         <!-- ^ large hero chart -->
         <div class="dasboard-ui-row">
-          <div class="dashboard-chart-large">
-            <h5 class="tertiary_heading_utility">Monthly Data</h5>
+          <div class="dashboard-chart-box large">
             <!-- Dropdown for selecting dataset -->
             <select id="data-selector" class="data-dropdown">
               <option value="passengers">Number of passengers</option>
