adding pie charts

--- a/dashboard.html
+++ b/dashboard.html
@@ -144,29 +144,13 @@
         </div>
         <!-- ^ Medium hero chart -->
         <div class="dasboard-ui-row">
-          <div class="dashboard-chart-medium">
-            <!-------------------------- Pie Chart  -->
-            <div class="graph-container">
-              <h5 class="tertiary_heading_utility">Passengers by Class</h5>
-              <svg
-                id="pie-chart"
-                class="graph-box"
-                viewBox="0 0 750 400"
-                preserveAspectRatio="xMinYMin meet"
-              ></svg>
-            </div>
-          </div>
-          <div class="dashboard-chart-medium">
-            <!-------------------------- Donut Chart -->
-            <div class="graph-container">
-              <h5 class="tertiary_heading_utility">Passengers by Class</h5>
-              <svg
-                id="donut-chart"
-                class="graph-box"
-                viewBox="0 0 750 400"
-                preserveAspectRatio="xMinYMin meet"
-              ></svg>
-            </div>
+          <div class="dashboard-chart-box medium">
+            <svg
+              id="pie-chart"
+              class="graph-box"
+              viewBox="0 0 750 400"
+              preserveAspectRatio="xMinYMin meet"
+            ></svg>
           </div>
         </div>
       </div>
@@ -189,6 +173,5 @@
     <script src="scripts/vertical_gauge_chart.js"></script>
     <script src="scripts/line_chart2.js"></script>
     <script src="scripts/pie_chart2.js"></script>
-    <script src="scripts/donut_chart2.js"></script>
   </body>
 </html>
