--- a/dashboard.html
+++ b/dashboard.html
@@ -152,6 +152,14 @@
               preserveAspectRatio="xMinYMin meet"
             ></svg>
           </div>
+          <div class="dashboard-chart-box medium">
+            <svg
+              id="donut-chart"
+              class="graph-box"
+              viewBox="0 0 750 400"
+              preserveAspectRatio="xMinYMin meet"
+            ></svg>
+          </div>
         </div>
       </div>
     </section>
@@ -173,5 +181,6 @@
     <script src="scripts/vertical_gauge_chart.js"></script>
     <script src="scripts/line_chart2.js"></script>
     <script src="scripts/pie_chart2.js"></script>
+    <script src="scripts/donut_chart_2.js"></script>
   </body>
 </html>
