--- a/dashboard.html
+++ b/dashboard.html
@@ -161,6 +161,17 @@
             ></svg>
           </div>
         </div>
+        <!-- ^ large hero chart -->
+        <div class="dasboard-ui-row">
+          <div class="dashboard-chart-box large">
+            <svg
+              id="bar-chart-horizontal"
+              class="graph-box"
+              viewBox="0 0 750 400"
+              preserveAspectRatio="xMinYMin meet"
+            ></svg>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -182,5 +193,6 @@
     <script src="scripts/line_chart2.js"></script>
     <script src="scripts/pie_chart2.js"></script>
     <script src="scripts/donut_chart_2.js"></script>
+    <script src="scripts/bar_chart_horizontal_2.js"></script>
   </body>
 </html>
