--- a/dashboard.html
+++ b/dashboard.html
@@ -187,6 +187,7 @@
           </div>
         </div>
       </section>
+      <!-- * ------------------- Aside section ------------------- -->
       <aside>asdfsfc</aside>
     </main>
 
