Adding requirement table

--- a/dashboard.html
+++ b/dashboard.html
@@ -188,7 +188,17 @@
         </div>
       </section>
       <!-- * ------------------- Aside section ------------------- -->
-      <aside>asdfsfc</aside>
+      <aside>
+        <div class="requirement-wrapper">
+          <h4>Requirements:</h4>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            facere quae dolor dolore amet atque natus repellat obcaecati quidem,
+            alias esse animi rem soluta quis, necessitatibus ducimus dolores
+            architecto ipsam eius fugit error! Possimus?
+          </p>
+        </div>
+      </aside>
     </main>
 
     <!-- * ------------------- Footer ------------------- -->
