Wroking on the requirement list

--- a/dashboard.html
+++ b/dashboard.html
@@ -190,13 +190,21 @@
       <!-- * ------------------- Aside section ------------------- -->
       <aside>
         <div class="requirement-wrapper">
-          <h4>Requirements:</h4>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores
-            facere quae dolor dolore amet atque natus repellat obcaecati quidem,
-            alias esse animi rem soluta quis, necessitatibus ducimus dolores
-            architecto ipsam eius fugit error! Possimus?
-          </p>
+          <h5>Requirements:</h5>
+
+          <ul class="requirement-nav">
+            <li>- Plain HTML, CSS and javaScript ✅</li>
+            <li>- Reflected Pattern Library ✅</li>
+
+            <li>- At least 3 single value charts : <b> C1,C2,C3 ✅</b></li>
+            <li>
+              - One Chart can change data with either dropdown or textbox :
+              <b>C4</b>
+              ✅
+            </li>
+            <li>Has at least 3 single value charts</li>
+            <li>Has at least 3 single value charts</li>
+          </ul>
         </div>
       </aside>
     </main>
