--- a/dashboard.html
+++ b/dashboard.html
@@ -193,14 +193,14 @@
           <h5>Requirements:</h5>
 
           <ul class="requirement-nav">
-            <li>- Plain HTML, CSS and javaScript ✅</li>
-            <li>- Reflected Pattern Library ✅</li>
+            <li>- Plain HTML, CSS and javaScript ✔️</li>
+            <li>- Reflected Pattern Library ✔️</li>
 
-            <li>- At least 3 single value charts : <b> C1,C2,C3 ✅</b></li>
+            <li>- At least 3 single value charts : <b> C1,C2,C3 ✔️</b></li>
             <li>
               - One Chart can change data with either dropdown or textbox :
               <b>C4</b>
-              ✅
+              ✔️
             </li>
             <li>Has at least 3 single value charts</li>
             <li>Has at least 3 single value charts</li>
