Adding last chart

--- a/dashboard.html
+++ b/dashboard.html
@@ -194,6 +194,18 @@
               </div>
             </div>
           </div>
+          <!-- ^ large hero chart -->
+          <div class="dasboard-ui-row">
+            <div class="dashboard-chart-box large">
+              <span class="identifier"> #<b>C8</b></span>
+              <svg
+                id="line-chart-stacked"
+                class="graph-box"
+                viewBox="0 0 750 400"
+                preserveAspectRatio="xMinYMin meet"
+              ></svg>
+            </div>
+          </div>
         </div>
       </section>
       <!-- * ------------------- Aside section ------------------- -->
@@ -208,10 +220,10 @@
             <li>• At least 3 single value charts : <b> C1,C2,C3 ✔️</b></li>
             <li>
               • One Chart can change data with either dropdown or textbox :
-              <b>C4</b>
+              <b>C4, C2</b>
               ✔️
             </li>
-            <li>• Has 1 chart that has tooltips with data <b>C4</b> ✔️</li>
+            <li>• Has 1 chart that has Tooltips with data <b>C4</b> ✔️</li>
             <li>• 1 button to update the chart style <b>C7</b> ✔️</li>
           </ul>
         </div>
@@ -237,5 +249,6 @@
     <script src="scripts/dashboard/pie_chart.js"></script>
     <script src="scripts/dashboard/donut_chart.js"></script>
     <script src="scripts/dashboard/bar_chart_horizontal.js"></script>
+    <script src="scripts/dashboard/line_chart_stacked.js"></script>
   </body>
 </html>
