--- a/dashboard.html
+++ b/dashboard.html
@@ -219,12 +219,13 @@
 
             <li>• At least 3 single value charts : <b> C1,C2,C3 ✔️</b></li>
             <li>
-              • One Chart can change data with either dropdown or textbox :
-              <b>C4, C2</b>
+              • One chart can change data with either dropdown or textbox :
+              <b>C2, C4</b>
               ✔️
             </li>
             <li>• Has 1 chart that has Tooltips with data <b>C4</b> ✔️</li>
             <li>• 1 button to update the chart style <b>C7</b> ✔️</li>
+            <li>• 1 Interactive legend <b>C8</b> ✔️</li>
           </ul>
         </div>
       </aside>
