--- a/dashboard.html
+++ b/dashboard.html
@@ -109,7 +109,9 @@
       <!-- * ------------------- Dashboard section ------------------- -->
       <section class="data-wrapp container_utility">
         <h2 class="section_title_utility">Dashboard</h2>
-        <div class="dasboard-ui-row"></div>
+        <div class="dasboard-ui-row-line-chart">
+          <div class="line-chart"></div>
+        </div>
       </section>
     </main>
 
