--- a/dashboard.html
+++ b/dashboard.html
@@ -109,8 +109,24 @@
       <!-- * ------------------- Dashboard section ------------------- -->
       <section class="data-wrapp container_utility">
         <h2 class="section_title_utility">Dashboard</h2>
+
         <div class="dasboard-ui-row-line-chart">
+          <p class="chart-title">
+            Chart 1: Distance travelled by each customer.
+          </p>
+
           <div class="line-chart"></div>
+        </div>
+        <div class="dasboard-ui-row-pie-chart">
+          <p class="chart-title">
+            Chart 2: Proportion of Customer Satisfaction
+          </p>
+          <div class="pie-chart"></div>
+        </div>
+        <div class="dashboard-ui-row-categories-chart">
+          <p class="chart-title">
+            Chart 3: Number of Satisfactory levels by category
+          </p>
         </div>
       </section>
     </main>
@@ -127,6 +143,6 @@
       </div>
     </footer>
 
-    <script src="scripts/dashboard/requirement_charts.js"></script>
+    <script src="scripts/dashboard/main_chart.js"></script>
   </body>
 </html>
