Working final charts

--- a/dashboard.html
+++ b/dashboard.html
@@ -128,6 +128,17 @@
             Chart 3: Number of Satisfactory levels by category
           </p>
         </div>
+        <div class="dashboard-ui-row-satisfaction-chart">
+          <p class="chart-title">
+            Chart 4: Relationship of Total Delay minutes and Departure/arrival
+            time convenient satisfactory
+          </p>
+        </div>
+        <div class="dashboard-ui-row-class-chart">
+          <p class="chart-title">
+            Chart 5: Average Satisfaction rate by Seat Class
+          </p>
+        </div>
       </section>
     </main>
 
