chart 6 causing issues

--- a/dashboard.html
+++ b/dashboard.html
@@ -139,6 +139,11 @@
             Chart 5: Average Satisfaction rate by Seat Class
           </p>
         </div>
+        <div class="dashboard-ui-row-stacked-chart">
+          <p class="chart-title">
+            Chart 6: The first 15 Disloyal Customers’ 4(or less) Ticket Prices
+          </p>
+        </div>
       </section>
     </main>
 
