--- a/dashboard.html
+++ b/dashboard.html
@@ -107,42 +107,56 @@
 
     <main>
       <!-- * ------------------- Dashboard section ------------------- -->
-      <section class="data-wrapp container_utility">
+      <section class="container_utility">
         <h2 class="section_title_utility">Dashboard</h2>
 
-        <div class="dasboard-ui-row-line-chart">
+        <!-- ^ Chart box 1 -->
+        <div class="dashboard-row">
           <p class="chart-title">
             Chart 1: Distance travelled by each customer.
           </p>
-
+          <!-- the actual graph for chart 1 -->
           <div class="line-chart"></div>
         </div>
-        <div class="dasboard-ui-row-pie-chart">
+        <!-- ^ Chart box 2 -->
+        <div class="dashboard-row">
           <p class="chart-title">
-            Chart 2: Proportion of Customer Satisfaction
+            Chart 2: Proportion of Customer Satisfaction.
           </p>
+          <!-- the actual graph for chart 2 -->
           <div class="pie-chart"></div>
+          <div class="legend-container"></div> <!-- Contenedor para la leyenda -->
         </div>
-        <div class="dashboard-ui-row-categories-chart">
+        <!-- ^ Chart box 3 -->
+        <div class="dashboard-row">
           <p class="chart-title">
-            Chart 3: Number of Satisfactory levels by category
+            Chart 3: Number of Satisfactory levels by category.
           </p>
+          <!-- the actual graph for chart 3 -->
+           <div class="bar-chart"></div>
         </div>
-        <div class="dashboard-ui-row-satisfaction-chart">
+        <!-- ^ Chart box 4 -->
+        <div class="dashboard-row">
           <p class="chart-title">
             Chart 4: Relationship of Total Delay minutes and Departure/arrival
-            time convenient satisfactory
-          </p>
+            time convenient satisfactory.
+          </p> 
+          <!-- the actual graph for chart 4 -->
+        </p> 
         </div>
-        <div class="dashboard-ui-row-class-chart">
+        <!-- ^ Chart box 5 -->
+        <div class="dashboard-row">
           <p class="chart-title">
-            Chart 5: Average Satisfaction rate by Seat Class
+            Chart 5: Average Satisfaction rate by Seat Class.
           </p>
+          <!-- the actual graph for chart 5 -->
         </div>
-        <div class="dashboard-ui-row-stacked-chart">
+        <!-- ^ Chart box 6 -->
+        <div class="dashboard-row">
           <p class="chart-title">
-            Chart 6: The first 15 Disloyal Customers’ 4(or less) Ticket Prices
+            Chart 6: The first 15 Disloyal Customers’ 4(or less) Ticket Prices.
           </p>
+          <!-- the actual graph for chart 6 -->
         </div>
       </section>
     </main>
