Intersection observer applied to dashboard page

--- a/dashboard.html
+++ b/dashboard.html
@@ -194,7 +194,7 @@
         <small>Ramses Verdayes</small>
       </div>
     </footer>
-
+    <script src="scripts/main.js"></script>
     <script type="module" src="/scripts/dashboard/main_chart.js"></script>
   </body>
 </html>
